<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/size_24dp"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".fragments.LoginHomeFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fragment_login_home_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_16dp"
            android:src="@drawable/ic_left_arrow" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/size_16dp"
            android:src="@drawable/ic_logo" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/facebook_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_24dp"
            android:layout_marginTop="@dimen/size_24dp"
            android:layout_marginRight="@dimen/size_24dp"
            android:background="@drawable/radious_rect_shape_login"
            android:gravity="center_vertical"
            android:padding="@dimen/size_8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_16dp"
                android:src="@drawable/ic_facebook" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/default_font"
                android:includeFontPadding="false"
                android:text="@string/login_with_facebook" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/google_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_24dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:layout_marginRight="@dimen/size_24dp"
            android:background="@drawable/radious_rect_shape_login"
            android:gravity="center_vertical"
            android:padding="@dimen/size_8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_16dp"
                android:src="@drawable/ic_google_plus" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/default_font"
                android:includeFontPadding="false"
                android:text="@string/login_with_google" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/more_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_16dp"
            android:fontFamily="@font/default_font"
            android:text="@string/more_options"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/more_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_24dp"
            android:layout_marginRight="@dimen/size_24dp"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/twitter_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:background="@drawable/radious_rect_shape_login"
                android:gravity="center_vertical"
                android:padding="@dimen/size_8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_16dp"
                    android:src="@drawable/ic_twitter" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/default_font"
                    android:includeFontPadding="false"
                    android:text="@string/login_with_twitter" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linkedin_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:background="@drawable/radious_rect_shape_login"
                android:gravity="center_vertical"
                android:padding="@dimen/size_8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_16dp"
                    android:src="@drawable/ic_linkedin" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/default_font"
                    android:includeFontPadding="false"
                    android:text="@string/login_with_linkedin" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:background="@drawable/radious_rect_shape_login"
                android:gravity="center_vertical"
                android:padding="@dimen/size_8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_16dp"
                    android:src="@drawable/ic_email_24dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/default_font"
                    android:includeFontPadding="false"
                    android:text="@string/login_with_email" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginLeft="@dimen/size_24dp"
            android:layout_marginTop="@dimen/size_40dp"
            android:layout_marginRight="@dimen/size_24dp"
            android:fontFamily="@font/default_font"
            android:gravity="bottom|center_horizontal"
            android:text="@string/by_signing_in_you_indicate_to_accept_our_terms_of_service_amp_privacy_policy" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>